turtleart.flower.Flower.scala.error
Compilation error:
Flower:11: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
     avance(25);recule(25);gauche(360/8);gauche()
                                               ^